--- a/packages/nb-config/compositions/nboperatorbootstrap/test/scenarios/local/claim.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/test/scenarios/local/claim.yaml
@@ -12,7 +12,7 @@ spec:
     groupNames:
       admin: techops-admin
       externalAccess: techops-users
-      kubeapiResourceGroup: cc-k8s
+      networkResourceGroup: cc-internal
     serviceUserName: testserviceuser
     accessTokenExpiresInDays: 5
     accessToken:
