--- a/packages/nb-config/compositions/nboperatorbootstrap/test/scenarios/sc/claim.yaml
+++ b/packages/nb-config/compositions/nboperatorbootstrap/test/scenarios/sc/claim.yaml
@@ -12,7 +12,7 @@ spec:
     groupNames:
       admin: techops-admin
       externalAccess: techops-users
-      kubeapiResourceGroup: sc-k8s
+      networkResourceGroup: sc-internal
     serviceUserName: testserviceuser
     accessTokenExpiresInDays: 5
     operatorKubeapiGroup: testgroup
