--- a/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
+++ b/packages/sc-mysqlcluster/compositions/mysqlcluster/test/scenarios/standard/claim.yaml
@@ -14,6 +14,7 @@ spec:
     dbName: my-database
     pxc:
       image: "percona/percona-xtradb-cluster:8.0.39-30.1" #example
+      imagePullPolicy: IfNotPresent
       storageSize: "20Gi"
       replicas: 3
       resources:
@@ -38,8 +39,20 @@ spec:
         max_connections=2000
         innodb_buffer_pool_size=2147483648
         wsrep_auto_increment_control=OFF
+      tolerations:
+        - key: "node-role.kubernetes.io/master"
+          operator: "Exists"
+          effect: "NoSchedule"
+        - key: "node-role.kubernetes.io/worker"
+          operator: "Exists"
+          effect: "NoSchedule"
+      podDisruptionBudget:
+        maxUnavailable: 1
+        minAvailable: 1
+      priorityClassName: ""
     haproxy:
       image: "percona/haproxy:2.8.11" #example
+      imagePullPolicy: IfNotPresent
       expose: false
       replicas: 2
       resources:
@@ -49,8 +62,12 @@ spec:
         limit:
           memory: 2Gi
           cpu: "1"
+      tolerations: []
+      podDisruptionBudget: {}
+      priorityClassName: ""
     logcollector:
       image: "percona/percona-xtradb-cluster-operator:1.16.1-logcollector-fluentbit3.2.2" #example
+      imagePullPolicy: IfNotPresent
       resources:
         requests:
           memory: 200Mi
@@ -60,6 +77,7 @@ spec:
           cpu: 200m
     backup:
       image: "percona/percona-xtradb-cluster-operator:1.14.0" # example
+      imagePullPolicy: IfNotPresent
       verifyTLS: true
       bucket: "s3-bucket-name"
       credentialsSecret: "s3-credentials"
@@ -67,8 +85,15 @@ spec:
       scheduleName: "daily-backup"
       cronScheduleExpression: "0 0 * * *"
       backupRetention: 7
+    dns:
+      name: my-cluster-service
+      region: eu-west-1
+      ttl: 300
+      type: A
+      zoneId: Z0111719400KIQPJMA8G
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
     ccK8sProviderName: kubernetes-provider
+    awsProviderName: aws-provider
   managementPolicies:
     - "*"
