--- a/packages/utils/compositions/aws-route53-record/resources/composition.yaml
+++ b/packages/utils/compositions/aws-route53-record/resources/composition.yaml
@@ -3,7 +3,7 @@ kind: Composition
 metadata:
   name: awsroute53record
   labels:
-    crossplane.io/xrd: xawsroute53record.utils.mojaloop.io
+    crossplane.io/xrd: xawsroute53record.utils.aws.mojaloop.io
 spec:
   compositeTypeRef:
     apiVersion: utils.aws.mojaloop.io/v1alpha1
