--- a/packages/gitlab/compositions/post-config/test/functions.yaml
+++ b/packages/gitlab/compositions/post-config/test/functions.yaml
@@ -4,11 +4,11 @@ kind: Function
 metadata:
   name: function-kcl
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/function-kcl:v0.10.3
+  package: ghcr.io/mojaloop/infra/crossplane-contrib/function-kcl:v0.11.3
 ---
 apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
 metadata:
   name: function-auto-ready
 spec:
-  package: xpkg.upbound.io/crossplane-contrib/function-auto-ready:v0.4.2
+  package: ghcr.io/mojaloop/infra/crossplane-contrib/function-auto-ready:v0.4.2
