--- a/packages/vault-config/configuration/crossplane.yaml
+++ b/packages/vault-config/configuration/crossplane.yaml
@@ -2,7 +2,7 @@
 apiVersion: meta.pkg.crossplane.io/v1alpha1
 kind: Configuration
 metadata:
-  name: vaultconfig
+  name: vault
 spec:
   dependsOn:
     - provider: xpkg.upbound.io/crossplane-contrib/provider-vault
