fix: composition and definition.yaml

--- a/packages/utils/compositions/aws-route53-record/resources/definition.yaml
+++ b/packages/utils/compositions/aws-route53-record/resources/definition.yaml
@@ -77,3 +77,9 @@ spec:
                   - type
                   - records
                   - zoneId
+          status:
+            type: object
+            properties:
+              fqdn:
+                type: string
+                description: FQDN of the external service object created
