--- a/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
+++ b/packages/sc-mongodbcluster/compositions/mongodbcluster/resources/definition.yaml
@@ -48,6 +48,7 @@ spec:
                 required:
                   - scK8sProviderName
                   - ccK8sProviderName
+                  - awsProviderName
                 properties:
                   ccK8sProviderName:
                     type: string
@@ -57,6 +58,10 @@ spec:
                     type: string
                     description: |-
                       The name of the provider config to use for the remote k8s provider.
+                  awsProviderName:
+                    type: string
+                    description: |-
+                      The name of the provider config to use for the AWS provider.
               parameters:
                 type: object
                 properties:
@@ -128,6 +133,35 @@ spec:
                                     properties:
                                       storage:
                                         type: string
+                      priorityClassName:
+                        type: string
+                        description: Priority class name for replsets
+                      tolerations:
+                        type: array
+                        items:
+                          type: object
+                          properties:
+                            key:
+                              type: string
+                              description: Toleration key
+                            operator:
+                              type: string
+                              description: Toleration operator
+                            value:
+                              type: string
+                              description: Toleration value
+                            effect:
+                              type: string
+                              description: Toleration effect
+                      podDisruptionBudget:
+                        type: object
+                        properties:
+                          minAvailable:
+                            type: number
+                            description: Minimum number of available pods
+                          maxUnavailable:
+                            type: number
+                            description: Maximum number of unavailable pods
                   sharding:
                     type: object
                     properties:
@@ -160,11 +194,6 @@ spec:
                                     type: string
                                   memory:
                                     type: string
-                          podDisruptionBudget:
-                            type: object
-                            properties:
-                              maxUnavailable:
-                                type: integer
                           expose:
                             type: object
                             properties:
@@ -172,6 +201,35 @@ spec:
                                 type: boolean
                               type:
                                 type: string
+                          priorityClassName:
+                            type: string
+                            description: Priority class name for sharding configvr
+                          tolerations:
+                            type: array
+                            items:
+                              type: object
+                              properties:
+                                key:
+                                  type: string
+                                  description: Toleration key
+                                operator:
+                                  type: string
+                                  description: Toleration operator
+                                value:
+                                  type: string
+                                  description: Toleration value
+                                effect:
+                                  type: string
+                                  description: Toleration effect
+                          podDisruptionBudget:
+                            type: object
+                            properties:
+                              minAvailable:
+                                type: number
+                                description: Minimum number of available pods
+                              maxUnavailable:
+                                type: number
+                                description: Maximum number of unavailable pods
                           volumeSpec:
                             type: object
                             properties:
@@ -213,11 +271,6 @@ spec:
                                     type: string
                                   memory:
                                     type: string
-                          podDisruptionBudget:
-                            type: object
-                            properties:
-                              maxUnavailable:
-                                type: integer
                           expose:
                             type: object
                             properties:
@@ -225,6 +278,35 @@ spec:
                                 type: boolean
                               type:
                                 type: string
+                          priorityClassName:
+                            type: string
+                            description: Priority class name for replsets
+                          tolerations:
+                            type: array
+                            items:
+                              type: object
+                              properties:
+                                key:
+                                  type: string
+                                  description: Toleration key
+                                operator:
+                                  type: string
+                                  description: Toleration operator
+                                value:
+                                  type: string
+                                  description: Toleration value
+                                effect:
+                                  type: string
+                                  description: Toleration effect
+                          podDisruptionBudget:
+                            type: object
+                            properties:
+                              minAvailable:
+                                type: number
+                                description: Minimum number of available pods
+                              maxUnavailable:
+                                type: number
+                                description: Maximum number of unavailable pods
                   backup:
                     type: object
                     properties:
@@ -238,3 +320,27 @@ spec:
                         type: string
                       region:
                         type: string
+
+                  dns:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        description: The name of the DNS record
+                      region:
+                        type: string
+                        description: AWS Region where the DNS record is created
+                      ttl:
+                        type: integer
+                        description: TTL (Time to Live) of the DNS record
+                      type:
+                        type: string
+                        description: Type of the DNS record (e.g., A, CNAME)
+                      records:
+                        type: array
+                        items:
+                          type: string
+                        description: List of DNS record values (e.g., IP addresses)
+                      zoneId:
+                        type: string
+                        description: Route53 Hosted Zone ID
