fix: gitlab runner jwt

--- a/packages/gitlab/compositions/post-config/resources/definition.yaml
+++ b/packages/gitlab/compositions/post-config/resources/definition.yaml
@@ -94,6 +94,11 @@ spec:
                     description: |-
                       The fqdn for vault api.
                     default: vault.cluster.mojaloop.io
+                  gitlabFqdn:
+                    type: string
+                    description: |-
+                      The fqdn for gitlab.
+                    default: gitlab.cluster.mojaloop.io
                   privateRepoUser:
                     type: string
                     description: |-
