--- a/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
+++ b/packages/gitlab/compositions/post-config/test/scenarios/standard/claim.yaml
@@ -9,6 +9,7 @@ spec:
     tenancyGroupName: tenancy-internal
     iacGroupName: iac
     gitlabRunnerRoleName: gitlab-runner-role
+    gitlabFqdn: gitlab.cluster.mojaloop.io
   providerConfigsRef:
     gitlabProvider: gitlab-provider
     kubernetesProvider: kubernetes-provider
