--- a/packages/nb-config/compositions/netbird-post-config/test/scenarios/default/claim.yaml
+++ b/packages/nb-config/compositions/netbird-post-config/test/scenarios/default/claim.yaml
@@ -1,5 +1,5 @@
 apiVersion: nb.mojaloop.io/v1alpha1
-kind: XPostConfig
+kind: XNetbirdPostConfig
 metadata:
   name: example-post-config
   namespace: testa
